<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpenseApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_expense_list">ExpenseList</string>
    <string name="title_activity_expense_list_fragment">ExpenseListFragment</string>
    <string name="sharedExpenseHeaderLabel">Share Amongst</string>
    <string name="sharedExpenseUserLabel">Include Me</string>
    <string name="sharedExpenseFriendsHint">Enter your friends\' email address</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginBtnLabel">Connect using Twitter</string>
    <string name="splashScreenTitleLabel">ExpenseApp</string>
    <string name="splashScreenSubTitleLabel">Managing expenses made easy.</string>
    <string name="value_here">Enter Value here</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="payee">Payee</string>
    <string name="payer">Payer</string>
    <string name="paymentMode">Payment mode</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="ExpenseLabel">Expense</string>
    <string name="IncomeLabel">Income</string>
    <string name="transactionSubmit">Submit</string>
	<string name="more">More</string>
	<string name="less">Less</string>
	<string name="friends_email">Share your expense</string>
	<string name="hint_friends_email">Enter your friends email</string>
	
    
</resources>