<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/loginBtnLabel"
        android:onClick="loginToRest" />

    <TextView
        android:id="@+id/tvSplashScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/splashScreenTitleLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />

    <TextView
        android:id="@+id/tvSplashScreenSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSplashScreenTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/splashScreenSubTitleLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
