<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    

    <!--   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/round_c_border"
        android:padding="5dp"
        >

      <TextView
            android:id="@+id/tvCategory"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/value_here" >
        </EditText>
    </LinearLayout>
 -->
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/round_c_border"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvPaymentMode"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/paymentMode"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etPaymentMode"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/value_here" >
        </EditText>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/round_c_border"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/value_here"
            android:inputType="textMultiLine" />
    </LinearLayout>
    
    

</LinearLayout>